--- a/src/views/templates/index.html
+++ b/src/views/templates/index.html
@@ -11,8 +11,8 @@
     <div class="wrapper">
       <form method="post">
         <div class="text-input">
-          <textarea name="text-to-translate" spellcheck="false" class="from-text" placeholder="{{ text_to_translate }}">{{ text_to_translate }}</textarea>
-          <textarea spellcheck="false" readonly disabled class="to-text" placeholder="{{ translated }}">{{ translated }}</textarea>
+          <textarea name="text-to-translate" spellcheck="false" class="from-text">{{ text_to_translate }}</textarea>
+          <textarea spellcheck="false" readonly disabled class="to-text">{{ translated }}</textarea>
         </div>
         <ul class="controls">
           <li class="row from">
